--- a/index.html
+++ b/index.html
@@ -136,27 +136,32 @@
         </div>
     </header>
     <section class="materias">
+      <div class="buttonback">
+        <a href="#"><svg width="40" height="40" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12.2929 9.70711C12.6834 10.0976 13.3166 10.0976 13.7071 9.70711C14.0976 9.31658 14.0976 8.68342 13.7071 8.29289L12.2929 9.70711ZM10 6L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289L10 6ZM6.29289 8.29289C5.90237 8.68342 5.90237 9.31658 6.29289 9.70711C6.68342 10.0976 7.31658 10.0976 7.70711 9.70711L6.29289 8.29289ZM9 14C9 14.5523 9.44771 15 10 15C10.5523 15 11 14.5523 11 14H9ZM20 10C20 4.47715 15.5228 0 10 0V2C14.4183 2 18 5.58172 18 10H20ZM10 0C4.47715 0 0 4.47715 0 10H2C2 5.58172 5.58172 2 10 2V0ZM0 10C0 15.5228 4.47715 20 10 20V18C5.58172 18 2 14.4183 2 10H0ZM10 20C15.5228 20 20 15.5228 20 10H18C18 14.4183 14.4183 18 10 18V20ZM13.7071 8.29289L10.7071 5.29289L9.29289 6.70711L12.2929 9.70711L13.7071 8.29289ZM9.29289 5.29289L6.29289 8.29289L7.70711 9.70711L10.7071 6.70711L9.29289 5.29289ZM9 6V14H11V6H9Z" fill="white"/>
+          </svg></a>
+      </div>
         <div class="buttonEnem materia">
             
-            <a href="#">
+            <a href="">
                 <img width="25" src="/assets/lapis.png" alt="icone da seção do ENEM">
                 <h4>ENEM</h4>
             </a>
         </div>
         <div class="buttonredação materia">
-            <a href="#">
+            <a href="">
                 <img width="25" src="/assets/redação.png" alt="icone da seção de redação">
                 <h4>REDAÇÃO</h4>
             </a>
         </div>
         <div class="buttonMatematica materia">
-            <a href="#">
+            <a href="#MathSection" onclick="mathOn()">
                 <img width="25" src="/assets/matematica.png" alt="Icone da seção de matematica">
                 <h4>MATEMÁTICA</h4>
             </a>    
         </div>
         <div class="buttonHistoria materia">
-            <a href="#">
+            <a href="">
                 <img width="25" height="30" src="/assets/pyramid.png" alt="icone da seção história">
                 <h4>HISTÓRIA</h4>
             </a>
@@ -287,5 +292,130 @@
                 
         </a>
     </div>
+    <section id="MathSection">
+        <div class="AgroupContents">
+          <div class="MainCollum">
+            <div class="card-Principal">
+              <div class="TittleCard">
+                <img class="brain" src="/assets/icon_brain_round.png" />
+                <h5>O Crânio Ajudante</h5>
+              </div>
+              <div class="content1">
+                <h1>Perguntas de Matemática</h1>
+                <button class="AskBtn">FAÇA SUA PERGUNTA</button>
+              </div>
+            </div>
+            <div class="Ask-select">
+              <div class="AskNivel">
+                <select class="selectElementNivel">
+                  <option value="1">Todos os Níveis</option>
+                  <option value="2">Ensino Fundamental(básico)</option>
+                  <option value="5">Ensino Médio(secundário)</option>
+                  <option value="4">Ensino Superior</option>
+                </select>
+              </div>
+              <div class="AskAnswer">
+                <select class="selectElementAnswer">
+                  <option value="1">Todas</option>
+                  <option value="2">Sem Resposta</option>
+                  <option value="5">Recebendo Propostas</option>
+                  <option value="4">Respondidas</option>
+                </select>
+              </div>
+            </div>
+            <div class="Quests">
+              <div class="Quest">
+                <div class="agroupIconThemePoint">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+  
+                  <h4>Matemática há 1 hora</h4>
+  
+                  <img class="points" src="/assets/points.png" />
+                </div>
+                <p>Quais são as raízes da equação ×*-3×4=0</p>
+                <div class="AnswerQuestBtn">
+                  <button class="AnswerQuest">RESPONDER</button>
+                </div>
+              </div>
+              <div class="Quest">
+                <div class="agroupIconThemePoint">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+  
+                  <h4>Matemática há 1 hora</h4>
+  
+                  <img class="points" src="/assets/points.png" />
+                </div>
+                <p>Quais são as raízes da equação ×*-3×4=0</p>
+                <div class="AnswerQuestBtn">
+                  <button class="AnswerQuest">RESPONDER</button>
+                </div>
+              </div>
+              <div class="Quest">
+                <div class="agroupIconThemePoint">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+  
+                  <h4>Matemática há 1 hora</h4>
+  
+                  <img class="points" src="/assets/points.png" />
+                </div>
+                <p>Quais são as raízes da equação ×*-3×4=0</p>
+                <div class="AnswerQuestBtn">
+                  <button class="AnswerQuest">RESPONDER</button>
+                </div>
+              </div>
+              <div class="Quest">
+                <div class="agroupIconThemePoint">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+  
+                  <h4>Matemática há 1 hora</h4>
+  
+                  <img class="points" src="/assets/points.png" />
+                </div>
+                <p>Quais são as raízes da equação ×*-3×4=0</p>
+                <div class="AnswerQuestBtn">
+                  <button class="AnswerQuest">RESPONDER</button>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="sbMain">
+            <div class="TittleSb">
+              <img class="coroa" src="/assets/crown-svgrepo-com (1).svg" />
+              <h4>Os melhores em Matemática</h4>
+            </div>
+            <div class="RankingList">
+              <select class="selectElement">
+                <option value="1">Diário</option>
+                <option value="2">Semanal</option>
+                <option value="5">Mensal</option>
+                <option value="4">Trimestral</option>
+              </select>
+              <div class="RankingUsers">
+                <div class="rUser">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+                  <h5 class="name">fabricio</h5>
+                  <p>100 pts</p>
+                </div>
+                <div class="rUser">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+                  <h5 class="name">fabricio</h5>
+                  <p>100 pts</p>
+                </div>
+                <div class="rUser">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+                  <h5 class="name">fabricio</h5>
+                  <p>100 pts</p>
+                </div>
+                <div class="rUser">
+                  <img class="iconUser" src="/assets/abstract-user-flat-4.svg" />
+                  <h5 class="name">fabricio</h5>
+                  <p>100 pts</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 </body>
 </html>
