finalizei a seção entrar e cadastre-se no NAV

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   </div>
               
                 </div>
-                <div onclick = "allbackcadastro()" class = "popupCadastro"><button>Cadastre-se</button></div>
+                <div onclick = "allbackcadastro()" class = "popupCadastro"></div>
               </div>
               <div class = "cadastrowrapper">
               
