arrumando os Wiki

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         <div class="allNave">
             <div class="navContent1">
-                <a href="#"><img width="90" src="/assets/Brainly_logo.svg.png" alt="logo"></a>
+                <a href="#"><img width="120" src="/assets/logoWiki.png" alt="logo"></a>
             </div>
             <div class="search">
                 <input type="search" placeholder="Qual a sua pergunta?" required >
@@ -190,7 +190,7 @@
                           <h1>FAÇA<br>PERGUNTAS</h1>
                           <p>
                               Seja pra prova de história ou na preparação pro ENEM,
-                              conte com o Brainly para tirar qualquer dúvida.
+                              conte com o WikiQuestions para tirar qualquer dúvida.
                           </p>
                       </div>
                       <div class="q2">
@@ -204,7 +204,7 @@
       
                       <div class="q3">
                           <h1>VÁ ALÉM</h1>
-                          <p> A comunidade do Brainly está sempre empolgada e vibrando por colaborar, provando
+                          <p> A comunidade do WikiQuestions está sempre empolgada e vibrando por colaborar, provando
                               que o aprendizado é m
                           </p>
                       </div>
@@ -251,7 +251,7 @@
       <section id="plus">
           <div class="plusContainer">
               <h2>Aprenda em outro nível <br>
-                  e agilize seu progresso com o Brainly Plus
+                  e agilize seu progresso com o WikiQuestions Plus
                   </h2>
               <p>Receba ajuda de especialistas do Wikiquestions com explicações passo a passo que dão aquele clique</p>
               <div class="cardPlus">
